TAG: alleleload-6-0-1-2
TAG: alleleload-6-0-1-1
DATE: 10/14/2015, 10/20/2015
STAFF: lec 
CHANGES:
1) TR12011/12070/scrum-dog/use new input file
2) postgres cleanup

TAG: alleleload-6-0-0-2
DATE: 08/21/15
STAFF: lec
CHANGES: TR12020/obsolete all_marker_assoc table

TAG: alleleload-6-0-0-1
DATE: 7/23/15
STAFF: pf
CHANGES: postgres conversion release tag

TAG: alleleload-tr11750-MP
DATE: 06/29/2015
STAFF: kstone

TAG: alleleload-tr11750-BP
DATE: 05/28/2015
STAFF: kstone

TAG: alleleload-5-1-8-1
DATE: 04/08/2014
STAFF: lec
CHANGES:
1) TR11515/allele stuff/Derivative Allele Load
updates for new schema (collection and allele subtypes)

TAG: alleleload-5-1-7-4
TAG: alleleload-5-1-7-3
TAG: alleleload-5-1-7-2
TAG: alleleload-5-1-7-1
DATE: 03/06/2014
STAFF: lec
CHANGES:
1) TR11515/allele stuff/Derivative Allele Load
