@@ -1,3 +1,9 @@
+TAG: alleleload-6-0-1-3
+DATE: 11/16/2015
+STAFF: lec 
+CHANGES:
+1) fix bin/makeAllele.py/ikmcSQLs script
+
 TAG: alleleload-6-0-1-2
 TAG: alleleload-6-0-1-1
 DATE: 10/14/2015, 10/20/2015
